--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <h2> year 6 🥳</h2>
 <p>  ASHBURTON 😎
     I wanna play for canterbury pride and the football ferns. no backup plan 😁
-    I also really want to meet ella toone because she seems really cool and I also want to meet dylan obrien because I need to know what the deal is. He looks like a nice fella but I have Suspicions. My favourite part of school is seeing mr hullen and going home. </p>
+    I also really want to meet ella toone because she seems really cool and I also want to meet dylan obrien 
+    because I need to know what the deal is. He looks like a nice fella but I have Suspicions. 
+    My favourite part of school is seeing mr hullen and going home. </p>
     
 <p>my interests </p>
 <ul>
@@ -11,4 +13,4 @@
     <li>andra is also my fav </li>
     <li>absolute baller</li>
     <li>write off at kahoots 😾</li>
-</ul>
+</ul> 
