--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <h1> G 😱 </h1>
 <h2> year 6 🥳</h2>
-<p>  ASHBURTON 😎
-    I wanna play for canterbury pride and the football ferns. no backup plan 😁
-    I also really want to meet ella toone because she seems really cool and I also want to meet dylan obrien 
-    because I need to know what the deal is. He looks like a nice fella but I have Suspicions. 
-    My favourite part of school is seeing mr hullen and going home. </p>
+<p>  ASHBURTON 😎 </p>
+<p>I wanna play for canterbury pride and the football ferns. no backup plan 😁</p> 
+<p>I also really want to meet ella toone because she seems really cool</p> 
+<p>and I also want to meet dylan obrien because I need to know what the deal is. He looks like a nice fella but I have Suspicions. </p>
+<p>My favourite part of school is seeing mr hullen and going home. </p>
     
 <p>my interests </p>
 <ul>
