forgot what i did
did some things go away grammarly i resized the images and added some more

--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
-<h1> G 😱 </h1>
+<header>
+    <h1> G </h1>
+</header>
+<a href="index.html">
+    home
+</a>
+<a href="bff.html">
+    my friends
+</a>
 <h2> year 6 🥳</h2>
-<p>  ASHBURTON 😎 </p>
-<p>I wanna play for canterbury pride and the football ferns. no backup plan 😁</p> 
-<p>I also really want to meet ella toone because she seems really cool</p> 
-<p>and I also want to meet dylan obrien because I need to know what the deal is. He looks like a nice fella but I have Suspicions. </p>
+<p> ASHBURTON 😎 </p>
+<p>I wanna play for canterbury pride and the football ferns. no backup plan 😁</p>
+<p>I also really want to meet ella toone because she seems really cool</p>
+<p>and I also want to meet dylan obrien because I need to know what the deal is. He looks like a nice fella but I have
+    Suspicions. </p>
 <p>My favourite part of school is seeing mr hullen and going home. </p>
-    
+
 <p>my interests </p>
 <ul>
     <li>football</li>
@@ -13,9 +22,9 @@
     <li>andra is also my fav </li>
     <li>absolute baller</li>
     <li>write off at kahoots 😾</li>
-</ul> 
+</ul>
 <h3> JACK GREALISH </h3>
 <img src="jacky g.jpeg" alt="jack grealish">
 <a href="https://www.nzfootball.co.nz/ford-football-ferns">
-    NZ FOOTBALL WEBSITE 
-</a>   
+    NZ FOOTBALL WEBSITE
+</a>
