--- a/bff.html
+++ b/bff.html
@@ -1,30 +1,54 @@
-<h1> Introduce Yourself </h1>
+<header>
+    <h1> G </h1>
+    <img src="IMG_0487.jpeg" alt="a dashing lad with a rando in the background">
+</header>
 
-<h2> My Best Friend(s) </h2>
+<nav>
+    <a href="index.html">
+        home</a>
+    <a href="bff.html">
+        my friends
+    </a>
+</nav>
 
-<ul>
-    <li>
-        <img src="zoe.jpeg">
-        <p> Zoe </p>
-    </li>
-    <li>
-        <img src="andra.jpeg">
-        <p> Andra </p>
-    </li>
-    <li>
-        <img src="amber.JPG">
-        <p> Amber </p>
-    </li>
-    <li>
-        <img src="kaizzer.JPG">
-        <p> Kaizzer </p>
-    </li>
-    <li>
-        <img src="ava.png">
-        <p> Ava </p>
-    </li>
-    <li>
-        <img src="piper.jpeg">
-        <p> Piper </p>
-    </li>
-</ul>
+<main>
+    <h2> My Best Friend(s) </h2>
+
+    <ul>
+        <li>
+            <img src="zoe.jpeg">
+            <p> Zoe </p>
+        </li>
+        <li>
+            <img src="andra.jpeg">
+            <p> Andra </p>
+        </li>
+        <li>
+            <img src="amber.JPG">
+            <p> Amber </p>
+        </li>
+        <li>
+            <img src="kaizzer.JPG">
+            <p> Kaizzer </p>
+        </li>
+        <li>
+            <img src="ava.png">
+            <p> Ava </p>
+        </li>
+
+    </ul>
+</main>
+
+<style>
+    header {
+        text-align: center;
+    }
+
+    h2 {
+        text-align: centre;
+    }
+
+    img {
+        width: 40%
+    }
+</style>
