omg fixed everything
mate this could be the best website you have ever seen now ive spent all of prep on it man its an absolute beauty look at all that css

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <header>
     <h1> G </h1>
+    <img src="IMG_0487.jpeg" alt="a dashing lad with a rando in the background">
 </header>
-<a href="index.html">
-    home
-</a>
-<a href="bff.html">
-    my friends
-</a>
+
+<nav>
+    <a href="index.html">
+        home</a>
+    <a href="bff.html">
+        my friends
+    </a>
+</nav>
 <h2> year 6 🥳</h2>
 <p> ASHBURTON 😎 </p>
 <p>I wanna play for canterbury pride and the football ferns. no backup plan 😁</p>
