feeling very summary even though its autumn
happy march
anyway what i did was i added a footer yay

--- a/bff.html
+++ b/bff.html
@@ -95,4 +95,18 @@
     a:hover {
         background-color: #679d35;
     }
+
+    footer {
+        color: #679d35;
+        font-family: 'Lexend Deca', sans-serif;
+        font-size: 1em;
+    }
 </style>
+<footer>
+    <p>
+        &copy; G 2023
+    </p>
+    <p>
+        web developer at craighead
+    </p>
+</footer>
