--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@300&display=swap" rel="stylesheet">
+</head>
 <header>
     <h1> G </h1>
     <img src="IMG_0487.jpeg" alt="a dashing lad with a rando in the background">
@@ -31,3 +36,69 @@
 <a href="https://www.nzfootball.co.nz/ford-football-ferns">
     NZ FOOTBALL WEBSITE
 </a>
+<style>
+    h1 {
+        text-align: center;
+        background-color: #8ece52;
+        font-family: 'Lexend Deca', sans-serif;
+        font-size: 4em;
+        color: rgb(255, 255, 255);
+        padding-bottom: 3px;
+        text-shadow: 2px 2px #679d35
+    }
+
+    h2 {
+        text-align: centre;
+    }
+
+    img {
+        width: 20%;
+        margin-bottom: 10px;
+    }
+
+    a {
+        background-color: #8ece52;
+        font-family: 'Lexend Deca', sans-serif;
+        font-size: 1em;
+        color: rgb(255, 255, 255);
+        margin-left: 5%;
+        padding: 1px;
+        text-shadow: 1px 1px #679d35;
+        text-decoration: none;
+    }
+
+    ul {
+        color: #679d35;
+        font-family: 'Lexend Deca', sans-serif;
+        font-size: 1em;
+    }
+
+    h2 {
+        background-color: #8ece52;
+        font-family: 'Lexend Deca', sans-serif;
+        font-size: 1.5em;
+        color: rgb(255, 255, 255);
+        margin-left: 5%;
+        padding: 1px;
+        text-shadow: 1px 1px #679d35;
+    }
+
+    p {
+        color: #679d35;
+        font-family: 'Lexend Deca', sans-serif;
+    }
+
+    h3 {
+        background-color: #8ece52;
+        font-family: 'Lexend Deca', sans-serif;
+        font-size: 1.2em;
+        color: rgb(255, 255, 255);
+        margin-left: 5%;
+        padding: 1px;
+        text-shadow: 1px 1px #679d35;
+    }
+
+    a:hover {
+        background-color: #679d35;
+    }
+</style>
