--- a/bff.html
+++ b/bff.html
@@ -8,7 +8,6 @@
     <img src="IMG_0487.jpeg"
         alt="a rather dashing lad with some rando in the back what does she think shes doing 😗✌️ ">
 </header>
-
 <nav>
     <a href="index.html">
         home</a>
@@ -16,7 +15,6 @@
         my friends
     </a>
 </nav>
-
 <main>
     <h2> My Best Friend(s) </h2>
 
@@ -40,7 +38,6 @@
 
 
 </main>
-
 <style>
     h1 {
         text-align: center;
@@ -53,12 +50,14 @@
     }
 
     h2 {
-        text-align: centre;
+        padding-left: 3px;
     }
 
     img {
         height: 200px;
-        margin-left: 3%
+        margin-left: 3%;
+        margin-right: 3%;
+        margin-bottom: 10px;
     }
 
     a {
@@ -66,7 +65,7 @@
         font-family: 'Lexend Deca', sans-serif;
         font-size: 1em;
         color: rgb(255, 255, 255);
-        margin-left: 5%;
+        margin-left: 2%;
         padding: 1px;
         text-shadow: 1px 1px #679d35;
         text-decoration: none;
@@ -76,7 +75,6 @@
         color: #679d35;
         font-family: 'Lexend Deca', sans-serif;
         font-size: 1em;
-        margin-left: 3%
     }
 
     h2 {
