--- a/index.html
+++ b/index.html
@@ -15,27 +15,29 @@
         my friends
     </a>
 </nav>
-<h2> year 6 🥳</h2>
-<p> ASHBURTON 😎 </p>
-<p>I wanna play for canterbury pride and the football ferns. no backup plan 😁</p>
-<p>I also really want to meet ella toone because she seems really cool</p>
-<p>and I also want to meet dylan obrien because I need to know what the deal is. He looks like a nice fella but I have
-    Suspicions. </p>
-<p>My favourite part of school is seeing mr hullen and going home. </p>
-
-<p>my interests </p>
-<ul>
-    <li>football</li>
-    <li>fav class is digi </li>
-    <li>andra is also my fav </li>
-    <li>absolute baller</li>
-    <li>write off at kahoots 😾</li>
-</ul>
-<h3> JACK GREALISH </h3>
-<img src="jacky g.jpeg" alt="jack grealish">
-<a href="https://www.nzfootball.co.nz/ford-football-ferns">
-    NZ FOOTBALL WEBSITE
-</a>
+<main>
+    <h2> year 6 🥳</h2>
+    <p> ASHBURTON 😎 </p>
+    <p>I wanna play for canterbury pride and the football ferns. no backup plan 😁</p>
+    <p>I also really want to meet ella toone because she seems really cool</p>
+    <p>and I also want to meet dylan obrien because I need to know what the deal is. He looks like a nice fella but I
+        have
+        Suspicions. </p>
+    <p>My favourite part of school is seeing mr hullen and going home. </p>
+    <p>my interests </p>
+    <ul>
+        <li>football</li>
+        <li>fav class is digi </li>
+        <li>andra is also my fav </li>
+        <li>absolute baller</li>
+        <li>write off at kahoots 😾</li>
+    </ul>
+    <h3> JACK GREALISH </h3>
+    <img src="jacky g.jpeg" alt="jack grealish">
+    <a href="https://www.nzfootball.co.nz/ford-football-ferns">
+        NZ FOOTBALL WEBSITE
+    </a>
+</main>
 <style>
     h1 {
         text-align: center;
@@ -48,11 +50,13 @@
     }
 
     h2 {
-        text-align: centre;
+        padding-left: 3px;
     }
 
     img {
-        width: 20%;
+        height: 200px;
+        margin-left: 3%;
+        margin-right: 3%;
         margin-bottom: 10px;
     }
 
@@ -61,13 +65,13 @@
         font-family: 'Lexend Deca', sans-serif;
         font-size: 1em;
         color: rgb(255, 255, 255);
-        margin-left: 5%;
+        margin-left: 2%;
         padding: 1px;
         text-shadow: 1px 1px #679d35;
         text-decoration: none;
     }
 
-    ul {
+    p {
         color: #679d35;
         font-family: 'Lexend Deca', sans-serif;
         font-size: 1em;
@@ -76,22 +80,7 @@
     h2 {
         background-color: #8ece52;
         font-family: 'Lexend Deca', sans-serif;
-        font-size: 1.5em;
-        color: rgb(255, 255, 255);
-        margin-left: 5%;
-        padding: 1px;
-        text-shadow: 1px 1px #679d35;
-    }
-
-    p {
-        color: #679d35;
-        font-family: 'Lexend Deca', sans-serif;
-    }
-
-    h3 {
-        background-color: #8ece52;
-        font-family: 'Lexend Deca', sans-serif;
-        font-size: 1.2em;
+        font-size: 2em;
         color: rgb(255, 255, 255);
         margin-left: 5%;
         padding: 1px;
@@ -101,4 +90,34 @@
     a:hover {
         background-color: #679d35;
     }
+
+    footer {
+        color: #679d35;
+        font-family: 'Lexend Deca', sans-serif;
+        font-size: 1em;
+    }
+
+    ul {
+        color: #679d35;
+        font-family: 'Lexend Deca', sans-serif;
+        font-size: 1em;
+    }
+
+    h3 {
+        background-color: #8ece52;
+        font-family: 'Lexend Deca', sans-serif;
+        font-size: 1em;
+        color: rgb(255, 255, 255);
+        margin-left: 5%;
+        padding: 1px;
+        text-shadow: 1px 1px #679d35;
+    }
 </style>
+<footer>
+    <p>
+        &copy; G 2023
+    </p>
+    <p>
+        web developer at craighead
+    </p>
+</footer>
